# paella

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  client.cpp
experiments/fig2/: Makefile  README.md  hol.cu  plot.py  plot_qlen.py  plot_ts.py  run.py
experiments/triton/: README.md  server.sh
include/llis/: gpu_utils.h  job.h
include/llis/client/: client.h  io_shm_entry.h  job_instance_ref.h  job_ref.h  profiler_client.h
include/llis/ipc/: atomic_lock.h  atomic_wrapper.h  defs.h  name_format.h  shared_memory_channel.h  shm_channel.h  shm_channel_1to1.h  shm_channel_impl.h  shm_primitive_channel.h  shm_primitive_channel_impl.h  threadfence_wrapper.h  unix_datagram_socket.h
include/llis/job/: context.h  coroutine_job.h  finished_block_notifier.h  instrument.h  instrument_info.h  job.h  utils.h
include/llis/server/: client_connection.h  gpu_resources.h  job_instance.h  profiler.h  registered_job.h  scheduler.h  scheduler_fifo.h  scheduler_fifo2.h  scheduler_full.h  scheduler_full2.h  scheduler_full3.h  server.h  sm_resources.h
include/llis/utils/: align.h  error.h  logging.hh  ops.h  path.h  time.hh
jobs/: CMakeLists.txt
jobs/cnn/: CMakeLists.txt  layer.cu  layer.h  main.cu
jobs/dummy_10/: CMakeLists.txt  dummy.cu
jobs/dummy_11/: CMakeLists.txt  dummy.cu
jobs/dummy_20/: CMakeLists.txt  dummy.cu
jobs/dummy_21/: CMakeLists.txt  dummy.cu
jobs/dummy_long/: CMakeLists.txt  dummy_long.cu
jobs/dummy_short/: CMakeLists.txt  dummy_short.cu
jobs/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.cu
jobs/helloworld_coroutine/: CMakeLists.txt  helloworld_coroutine.cu
jobs/run_forever/: CMakeLists.txt  run_forever.cu
jobs/tvm/: CMakeLists.txt  tvm.cpp
jobs/tvm_arcfaceresnet100/: CMakeLists.txt  tvm_arcfaceresnet100.cpp
jobs/tvm_densenet121/: CMakeLists.txt  tvm_densenet121.cpp
jobs/tvm_googlenet/: CMakeLists.txt  tvm_googlenet.cpp
jobs/tvm_inception_v3/: CMakeLists.txt  tvm_inception_v3.cpp
jobs/tvm_mnist/: CMakeLists.txt  tvm_mnist.cpp
jobs/tvm_mobilenet/: CMakeLists.txt  tvm_mobilenet.cpp
jobs/tvm_resnet18/: CMakeLists.txt  tvm_resnet18.cpp
jobs/tvm_resnet34/: CMakeLists.txt  tvm_resnet34.cpp
jobs/tvm_resnet50/: CMakeLists.txt  tvm_resnet50.cpp
jobs/tvm_squeezenet1_1/: CMakeLists.txt  tvm_squeezenet1_1.cpp
jobs/tvm_ultraface320/: CMakeLists.txt  tvm_ultraface320.cpp
jobs/vec_add_coroutine/: CMakeLists.txt  vec_add_coroutine.cu
sosp23_artifact/: README.md  gen_data_fig11_cuda.sh  gen_data_fig11_paella.sh  gen_data_fig11_triton.sh  gen_data_fig12_cuda.sh  gen_data_fig12_mps.sh  gen_data_fig12_paella.sh  gen_data_fig13.sh  plot_fig11.sh  plot_fig12.sh  plot_fig13.sh  triton_server_launch.sh
sosp23_artifact/setup/: README.md  build_triton_docker.sh  dso_to_tf.py  install_dependencies.sh  install_llis_tvm.sh  install_triton_client.sh  onnx2tvm.py  onnx2tvm_all.sh  reset_all.sh  reset_llis_tvm.sh
sosp23_artifact/setup/triton_docker/: Dockerfile  build_tvm_tf.sh  convert_tvm_to_tf.sh  run_on_tf_docker.sh  setup.sh
sosp23_artifact/tools/: merge_mps_results.py  parse_input_kelvin.py  parse_triton.py  plot_latency_fairness_threshold.py  plot_latency_throughput_subplots.py
sosp23_artifact/tvm_models_dim/: densenet-9-cuda-pack.so.dim  googlenet-9-cuda-pack.so.dim  mnist-8-cuda-pack.so.dim
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  job_instance_ref.cpp  job_ref.cpp  profiler_client.cpp
src/ipc/: CMakeLists.txt  name_format.cpp  shared_memory_channel.cpp  shm_channel.cpp  shm_channel.cu  shm_channel_1to1.cpp  shm_channel_impl.h  shm_primitive_channel.cu  unix_datagram_socket.cpp
src/job/: CMakeLists.txt  context.cpp  coroutine_job.cpp  finished_block_notifier.cu  utils.cu
src/server/: CMakeLists.txt  gpu_resources.cpp  profiler.cpp  registered_job.cpp  scheduler.cpp  scheduler_fifo.cpp  scheduler_fifo2.cpp  scheduler_full.cpp  scheduler_full2.cpp  scheduler_full3.cpp  server.cpp  sm_resources.cpp
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  client.cpp  client_concurrent_run_latencies.cpp  client_concurrent_run_latencies_fixed_num_multi.cpp  client_concurrent_run_latencies_set_load.cpp  client_concurrent_run_latencies_set_load_multi.cpp  client_concurrent_runs.cpp  client_single_latency.cpp  raw_kernel_launch.cu
tests/ipc/: CMakeLists.txt
tests/ipc/shared_memory_channel/: CMakeLists.txt  shmc_read.cpp  shmc_read_write.cpp  shmc_write.cpp
tests/ipc/shared_memory_channel/latency/: shmc_latency_read.cpp  shmc_latency_read_bare_atomic.cpp  shmc_latency_read_bare_atomic_loop.cpp  shmc_latency_read_loop.cpp  shmc_latency_write.cpp  shmc_latency_write_loop.cpp
tests/ipc/shm_channel/: CMakeLists.txt  shmc_read.cpp  shmc_read_write.cpp  shmc_read_write_cpu_gpu.cu  shmc_read_write_same_proc.cpp  shmc_write.cpp
tests/ipc/shm_channel/latency/: CMakeLists.txt  shmc_latency_read.cpp  shmc_latency_read_loop.cpp  shmc_latency_write.cpp  shmc_latency_write_loop.cpp  shmpc_latency_gpu.cu
tests/ipc/shm_channel_1to1/latency/: CMakeLists.txt  shmc_latency_read.cpp  shmc_latency_read_loop.cpp  shmc_latency_write.cpp  shmc_latency_write_bare_atomic.cpp  shmc_latency_write_bare_atomic_loop.cpp  shmc_latency_write_loop.cpp
tests/simple/: CMakeLists.txt  cuda_callback_benchmark.cu  cuda_sync_benchmark.cu  mmap_mlock_limit.cpp  tvm_direct_concurrent.cpp  tvm_direct_multistream.cpp
tests/utils/: CMakeLists.txt  workload_pregen.cpp
tools/: calculate_jains_fairness_index.py  calculate_overhead_stack.py  cloudlab_setup.sh  parse_clockwork.py  parse_triton.py  plot_all_no_mnist.sh  plot_block_exec_times_cdf.py  plot_latency_fairness_threshold.py  plot_latency_throughput.py  plot_latency_throughput_subplots.py  plot_overhead_stack_graph.py  plot_resnet18_inception_v3.sh  run_all.sh  run_all_direct.sh  run_all_direct_multistream.sh  run_fairness_dummy.sh  run_fairness_mnist_inception_v3.sh  run_inception_v3.sh  run_mnist.sh  run_mnist_googlenet.sh  run_mnist_inception_v3.sh  run_mnist_resnet50.sh  run_mnist_sched_sleep.sh  run_mobilenet.sh  run_mobilenet_inception_v3.sh  run_ultraface_arcface.sh
(+12 files in other folders)
