add_subdirectory(helloworld)
add_subdirectory(helloworld_coroutine)
add_subdirectory(vec_add_coroutine)
add_subdirectory(run_forever)
add_subdirectory(dummy_long)
add_subdirectory(dummy_short)
# Have to fix it before running it
#add_subdirectory(cnn)

if(TVM_PATH)
    add_subdirectory(tvm_mnist)
    add_subdirectory(tvm_mobilenet)
    add_subdirectory(tvm_resnet18)
    add_subdirectory(tvm_inception_v3)
    add_subdirectory(tvm_googlenet)
    add_subdirectory(tvm_ultraface320)
    add_subdirectory(tvm_densenet121)
    add_subdirectory(tvm_arcfaceresnet100)
    add_subdirectory(tvm_resnet50)
endif(TVM_PATH)

