set(CMAKE_INSTALL_RPATH $ORIGIN $ORIGIN/..)

add_subdirectory(helloworld)
add_subdirectory(helloworld_coroutine)
add_subdirectory(vec_add_coroutine)
add_subdirectory(run_forever)
add_subdirectory(dummy_long)
add_subdirectory(dummy_short)
add_subdirectory(dummy_10)
add_subdirectory(dummy_11)
add_subdirectory(dummy_20)
add_subdirectory(dummy_21)
# Have to fix it before running it
#add_subdirectory(cnn)

find_package(tvm)

if(tvm_FOUND)
    if(TVM_INCLUDE_DIR)
        include_directories(PUBLIC ${TVM_INCLUDE_DIR})
    endif(TVM_INCLUDE_DIR)

    add_subdirectory(tvm_mnist)
    add_subdirectory(tvm_mobilenet)
    add_subdirectory(tvm_resnet18)
    add_subdirectory(tvm_inception_v3)
    add_subdirectory(tvm_googlenet)
    add_subdirectory(tvm_ultraface320)
    add_subdirectory(tvm_densenet121)
    add_subdirectory(tvm_arcfaceresnet100)
    add_subdirectory(tvm_resnet50)
    add_subdirectory(tvm_resnet34)
    add_subdirectory(tvm_squeezenet1_1)
endif(tvm_FOUND)

