add_executable(shmc_latency_read shmc_latency_read.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_read rt)
add_executable(shmc_latency_write shmc_latency_write.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_write rt)
add_executable(shmc_latency_read_bare_atomic shmc_latency_read_bare_atomic.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_read_bare_atomic rt)
add_executable(shmc_latency_write_bare_atomic shmc_latency_write_bare_atomic.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_write_bare_atomic rt)
add_executable(shmc_latency_read_bare_atomic_loop shmc_latency_read_bare_atomic_loop.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_read_bare_atomic_loop rt)
add_executable(shmc_latency_write_bare_atomic_loop shmc_latency_write_bare_atomic_loop.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_write_bare_atomic_loop rt)
add_executable(shmc_latency_read_loop shmc_latency_read_loop.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_read_loop rt)
add_executable(shmc_latency_write_loop shmc_latency_write_loop.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_write_loop rt)
